# copilotchat

./: .env.example  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  package.json  playwright.config.ts  tsconfig.base.json  vercel.json
.changeset/: README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
api/: bootstrap.ts  chat.ts  logout.ts
api/auth/: pat.ts
api/auth/dev/: cli.ts
api/auth/device/: poll.ts  start.ts
apps/web/: index.html  package.json  tailwind.config.ts  tsconfig.json  vitest.config.ts
apps/web/e2e/: smoke.spec.ts
apps/web/src/: App.tsx  app-store.test.ts  app-store.ts  app.test.tsx  bff-client.test.ts  bff-client.ts  bridge-client.test.ts  bridge-client.ts  main.tsx  styles.css
apps/web/src/components/: access-view.tsx  auth-view.test.tsx  auth-view.tsx  chat-view.test.tsx  chat-view.tsx  diagnostics-view.test.tsx  diagnostics-view.tsx  loading-view.tsx  message-bubble.tsx  model-selector.tsx  sidebar.tsx  theme-provider.tsx
apps/web/src/components/ui/: badge.tsx  scroll-area.tsx  tooltip.tsx
apps/web/src/server/: github-bff.extra.test.ts  github-bff.test.ts  github-bff.ts  vercel-bff.test.ts  vercel-bff.ts
apps/web/src/test/: setup.ts
crates/copilotchat-cli/: Cargo.toml
crates/copilotchat-cli/src/: lib.rs  main.rs  tui.rs
crates/copilotchat-core/: Cargo.toml
crates/copilotchat-core/src/: auth.rs  config.rs  copilot.rs  history.rs  lib.rs  models.rs  types.rs
scripts/: dev.ts
