[workspace]
members = ["crates/copilotchat-core", "crates/copilotchat-cli"]
resolver = "2"

[workspace.package]
version = "0.1.3"
edition = "2024"
license = "MIT"
authors = ["Dhruv Mars"]
repository = "https://github.com/Dhruv2mars/copilotchat"

[workspace.dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
crossterm = { version = "0.29.0", features = ["event-stream"] }
dirs = "6.0.0"
futures-util = "0.3.31"
keyring = { version = "3.6.3", features = ["apple-native", "windows-native", "sync-secret-service", "vendored"] }
open = "5.3.2"
ratatui = "0.29.0"
reqwest = { version = "0.12.23", default-features = false, features = ["charset", "http2", "json", "macos-system-configuration", "rustls-tls", "stream"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt-multi-thread", "sync", "time"] }
tui-textarea = "0.7.0"
url = "2.5.8"
uuid = { version = "1.18.1", features = ["serde", "v4"] }
wiremock = "0.6.5"
